# UW-iEEG-keysights

./: .gitignore  README.MD  pyproject.toml
docs/: brainvision_trigger_compatibility.md  trigger_timing_analysis.md
src/: ERP_stim.py  basic_stim.py  ido_stim.py  run_stim.py
src/lib/: logger.py  stimulator.py  visualizer.py
tests/: test_logger.py  test_stimulator.py
